CSRF token Introduction, changing the form method from default 'GET' to 'POST'

--- a/jsite/templates/analyze.html
+++ b/jsite/templates/analyze.html
@@ -33,7 +33,7 @@
   </div>
 </nav>
 <div class="alert alert-success alert-dismissible fade show" role="alert">
-  <strong>ALert! Task Has Been Perform Successfully!</strong> Text has been analyzed!
+  <strong>Alert! Task Has Been Perform Successfully!</strong> Text has been analyzed!
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 <div class="container">
