--- a/jsite/templates/index.html
+++ b/jsite/templates/index.html
@@ -37,7 +37,7 @@
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 <div class="container">
-    <form class="form" action="/analyze" method="get">
+    <form class="form" action="/analyze/" method="post">
     <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label">Text Area</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" name='text' rows="9"></textarea>
